fixed overflow error on mobile

--- a/static/login.css
+++ b/static/login.css
@@ -88,7 +88,7 @@
 
 @media (max-width: 730px) {
     svg {display: none}
-    #login_html {background: #091B30; overflow-x: hidden !important;}
+    #login_html, #login_body {background: #091B30; overflow-x: visible !important;}
 }
 
 .error {
@@ -99,7 +99,7 @@
     margin-top: 10px;
 }
 
-#login_body {margin: 0; display: flex; flex-direction: column; overflow-x: hidden !important;}
+#login_body {margin: 0; display: flex; flex-direction: column; overflow-x: hidden;}
 
 #gsignin *{
 	height:auto;
